@@ -18,32 +18,29 @@
  */
 package org.apache.plc4x.java.knxnetip;
 
-import io.netty.buffer.ByteBuf;
+import org.apache.plc4x.java.api.messages.PlcDiscoveryItemHandler;
 import org.apache.plc4x.java.api.messages.PlcDiscoveryRequest;
-import org.apache.plc4x.java.knxnetip.discovery.KnxNetIpPlcDiscoverer;
-import org.apache.plc4x.java.spi.configuration.PlcConnectionConfiguration;
-import org.apache.plc4x.java.spi.configuration.PlcTransportConfiguration;
+import org.apache.plc4x.java.api.messages.PlcDiscoveryResponse;
 import org.apache.plc4x.java.knxnetip.configuration.KnxNetIpConfiguration;
-import org.apache.plc4x.java.knxnetip.configuration.KnxNetIpPcapReplayTransportConfiguration;
-import org.apache.plc4x.java.knxnetip.configuration.KnxNetIpRawSocketTransportConfiguration;
 import org.apache.plc4x.java.knxnetip.configuration.KnxNetIpUdpTransportConfiguration;
-import org.apache.plc4x.java.knxnetip.context.KnxNetIpDriverContext;
+import org.apache.plc4x.java.knxnetip.discovery.KnxNetIpPlcDiscoverer;
 import org.apache.plc4x.java.knxnetip.tag.KnxNetIpTag;
-import org.apache.plc4x.java.knxnetip.readwrite.KnxNetIpMessage;
-import org.apache.plc4x.java.knxnetip.protocol.KnxNetIpProtocolLogic;
-import org.apache.plc4x.java.spi.messages.DefaultPlcDiscoveryRequest;
-import org.apache.plc4x.java.spi.connection.GeneratedDriverBase;
-import org.apache.plc4x.java.spi.connection.ProtocolStackConfigurer;
-import org.apache.plc4x.java.spi.connection.SingleProtocolStackConfigurer;
-import org.apache.plc4x.java.spi.optimizer.BaseOptimizer;
-import org.apache.plc4x.java.spi.optimizer.SingleTagOptimizer;
+import org.apache.plc4x.java.spi.config.Configuration;
+import org.apache.plc4x.java.spi.drivers.ConnectionBase;
+import org.apache.plc4x.java.spi.drivers.DriverBase;
+import org.apache.plc4x.java.spi.drivers.functions.PlcDiscoverer;
+import org.apache.plc4x.java.spi.transports.api.Transport;
+import org.apache.plc4x.java.spi.transports.api.TransportInstance;
+import org.apache.plc4x.java.spi.transports.api.config.TransportConfiguration;
+import org.apache.plc4x.java.utils.auditlog.api.AuditLog;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.ToIntFunction;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 
-public class KnxNetIpDriver extends GeneratedDriverBase<KnxNetIpMessage> {
+public class KnxNetIpDriver extends DriverBase implements PlcDiscoverer {
 
     public static final int KNXNET_IP_PORT = 3671;
 
@@ -58,36 +55,39 @@ public class KnxNetIpDriver extends GeneratedDriverBase<KnxNetIpMessage> {
     }
 
     @Override
-    protected Class<? extends PlcConnectionConfiguration> getConfigurationClass() {
+    protected Class<? extends Configuration> getConfigurationClass() {
         return KnxNetIpConfiguration.class;
     }
 
     @Override
-    protected Optional<Class<? extends PlcTransportConfiguration>> getTransportConfigurationClass(String transportCode) {
-        switch (transportCode) {
-            case "udp":
-                return Optional.of(KnxNetIpUdpTransportConfiguration.class);
-            case "pcap":
-                return Optional.of(KnxNetIpPcapReplayTransportConfiguration.class);
-            case "raw":
-                return Optional.of(KnxNetIpRawSocketTransportConfiguration.class);
+    protected Class<? extends TransportConfiguration> getTransportConfigurationClass(Transport<?> transport) {
+        if ("udp".equals(transport.getTransportCode())) {
+            return KnxNetIpUdpTransportConfiguration.class;
         }
-        return Optional.empty();
+        return super.getTransportConfigurationClass(transport);
     }
 
     @Override
-    protected Optional<String> getDefaultTransportCode() {
+    public Optional<String> getDefaultTransportCode() {
         return Optional.of("udp");
     }
 
     @Override
-    protected List<String> getSupportedTransportCodes() {
-        return Arrays.asList("udp", "pcap", "raw");
+    public List<String> getSupportedTransportCodes() {
+        return List.of("udp");
     }
 
     @Override
-    public PlcDiscoveryRequest.Builder discoveryRequestBuilder() {
-        return new DefaultPlcDiscoveryRequest.Builder(new KnxNetIpPlcDiscoverer());
+    public Set<Integer> defaultPorts(String transportCode) {
+        if ("udp".equalsIgnoreCase(transportCode)) {
+            return Set.of(KNXNET_IP_PORT);
+        }
+        return Collections.emptySet();
+    }
+
+    @Override
+    protected boolean canDiscover() {
+        return true;
     }
 
     @Override
@@ -97,7 +97,7 @@ public class KnxNetIpDriver extends GeneratedDriverBase<KnxNetIpMessage> {
 
     @Override
     protected boolean canRead() {
-        return false;
+        return true;
     }
 
     @Override
@@ -111,39 +111,30 @@ public class KnxNetIpDriver extends GeneratedDriverBase<KnxNetIpMessage> {
     }
 
     @Override
-    protected boolean canDiscover() {
+    protected boolean canBrowse() {
         return true;
     }
 
     @Override
-    protected BaseOptimizer getOptimizer() {
-        return new SingleTagOptimizer();
+    public CompletableFuture<PlcDiscoveryResponse> discover(PlcDiscoveryRequest discoveryRequest) {
+        return new KnxNetIpPlcDiscoverer().discover(discoveryRequest);
     }
 
     @Override
-    protected boolean awaitDisconnectComplete() { return true; }
-
-    @Override
-    protected ProtocolStackConfigurer<KnxNetIpMessage> getStackConfigurer() {
-        return SingleProtocolStackConfigurer.builder(KnxNetIpMessage.class, KnxNetIpMessage::staticParse)
-            .withProtocol(KnxNetIpProtocolLogic.class)
-            .withDriverContext(KnxNetIpDriverContext.class)
-            .withPacketSizeEstimator(PacketSizeEstimator.class)
-            .build();
-    }
-
-    public static class PacketSizeEstimator implements ToIntFunction<ByteBuf> {
-        @Override
-        public int applyAsInt(ByteBuf byteBuf) {
-            if (byteBuf.readableBytes() >= 6) {
-                return byteBuf.getUnsignedShort(byteBuf.readerIndex() + 4);
-            }
-            return -1;
-        }
+    public CompletableFuture<PlcDiscoveryResponse> discoverWithHandler(PlcDiscoveryRequest discoveryRequest,
+                                                                       PlcDiscoveryItemHandler handler) {
+        return new KnxNetIpPlcDiscoverer().discoverWithHandler(discoveryRequest, handler);
     }
 
     @Override
-    public KnxNetIpTag prepareTag(String tagAddress){
+    protected ConnectionBase<?> getConnection(Configuration configuration,
+                                              TransportInstance<?> transportInstance,
+                                              AuditLog auditLog) {
+        return new KnxNetIpConnection((KnxNetIpConfiguration) configuration, transportInstance, auditLog);
+    }
+
+    @Override
+    public KnxNetIpTag prepareTag(String tagAddress) {
         return KnxNetIpTag.of(tagAddress);
     }
 
